Add footer, update testing.html to now use json, and show warnings if its a Early development build or if there is currently no file available, also the slection dropdowns were changed to be a little easier to understand and to look cleaner

--- a/about.html
+++ b/about.html
@@ -1,51 +1,81 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Mod-Sauce Dev's</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/theme-toggle.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>About - Mod-Sauce</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="assets/css/theme-toggle.css"
+        />
+    </head>
+    <body>
+        <!-- Main Content -->
+        <main class="main-content">
+            <h1>About Mod-Sauce</h1>
+            <p>
+                We are a team of passionate Minecraft mod developers dedicated
+                to reviving and maintaining older, abandoned mods.
+            </p>
 
-</head>
-<body>
-    <!-- Main Content -->
-    <main class="main-content">
-        <h1>About Mod-Sauce Dev's</h1>
-        <p>We are a team of passionate Minecraft mod developers dedicated to reviving and maintaining older, abandoned mods.</p>
+            <div class="card">
+                <h2>Our Mission</h2>
+                <p>
+                    Our mission is to ensure that classic Minecraft mods remain
+                    accessible and compatible with modern versions of the game.
+                    We believe that these mods contribute significantly to the
+                    rich history and diversity of the Minecraft modding
+                    community.
+                </p>
+            </div>
 
-        <div class="card">
-            <h2>Our Mission</h2>
-            <p>Our mission is to ensure that classic Minecraft mods remain accessible and compatible with modern versions of the game. We believe that these mods contribute significantly to the rich history and diversity of the Minecraft modding community.</p>
-        </div>
+            <div class="card">
+                <h2>What We Do</h2>
+                <p>We specialize in:</p>
+                <ul>
+                    <li>Repairing and updating outdated mods</li>
+                    <li>
+                        Maintaining the original spirit and vision of the mods
+                    </li>
+                    <li>Providing community support and updates</li>
+                </ul>
+            </div>
 
-        <div class="card">
-            <h2>What We Do</h2>
-            <p>We specialize in:</p>
-            <ul>
-                <li>Repairing and updating outdated mods</li>
-                <li>Maintaining the original spirit and vision of the mods</li>
-                <li>Providing community support and updates</li>
-            </ul>
-        </div>
+            <div class="card">
+                <h2>Our Team</h2>
+                <p>
+                    We are a small, dedicated team of developers with a shared
+                    love for Minecraft and its modding community. We are
+                    committed to providing high-quality, reliable mods for
+                    everyone to enjoy.
+                </p>
+                <a href="https://github.com/Mooo0042" class="btn"
+                    >Fr4gm3nt3d.sh (prev. Us3r0) - GitHub</a
+                >
+                <a href="https://github.com/Shadowbee27" class="btn"
+                    >Shadowbee - GitHub</a
+                >
+            </div>
 
-        <div class="card">
-            <h2>Our Team</h2>
-            <p>We are a small, dedicated team of developers with a shared love for Minecraft and its modding community. We are committed to providing high-quality, reliable mods for everyone to enjoy.</p>
-            <a href="https://github.com/Mooo0042" class="btn">Fr4gm3nt3d.sh (prev. Us3r0) - GitHub</a>
-            <a href="https://github.com/Shadowbee27" class="btn">Shadowbee - GitHub</a>
-        </div>
-
-        <div class="card">
-            <h2>Get Involved</h2>
-            <p>If you're interested in contributing or have any questions, feel free to join our Discord community. We welcome feedback, suggestions, and contributions from the community.</p>
-            <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord Server</a>
-            <p>Thank you for your support!</p>
-        </div>
-    </main>
-    <script src="assets/js/navbar-loader.js"></script>
-    <script src="assets/js/nav-theme.js"></script>
-    <script src="assets/js/theme-toggle.js"></script>
-</body>
+            <div class="card">
+                <h2>Get Involved</h2>
+                <p>
+                    If you're interested in contributing or have any questions,
+                    feel free to join our Discord community. We welcome
+                    feedback, suggestions, and contributions from the community.
+                </p>
+                <a href="https://discord.gg/VNrzdd5ErJ" class="btn"
+                    >Join Discord Server</a
+                >
+                <p>Thank you for your support!</p>
+            </div>
+        </main>
+        <script src="assets/js/navbar-loader.js"></script>
+        <script src="assets/js/nav-theme.js"></script>
+        <script src="assets/js/theme-toggle.js"></script>
+        <script src="assets/js/footer-loader.js"></script>
+    </body>
 </html>
