--- a/index.html
+++ b/index.html
@@ -1,41 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mod-Sauce Dev's</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/theme-toggle.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Mod-Sauce</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="assets/css/theme-toggle.css"
+        />
+    </head>
+    <body>
+        <!-- Main Content -->
+        <main class="main-content">
+            <h1>Welcome to Mod-Sauce</h1>
+            <p>
+                We revive and maintain classic Minecraft mods for the modern
+                era.
+            </p>
 
-</head>
-<body>
-    <!-- Main Content -->
-    <main class="main-content">
-        <h1>Welcome to Mod-Sauce Dev's</h1>
-        <p>We revive and maintain classic Minecraft mods for the modern era.</p>
+            <div class="card">
+                <h2>What We Do</h2>
+                <p>
+                    We specialize in repairing and updating Minecraft mods that
+                    are no longer being developed. Our goal is to bring old mods
+                    back to life and ensure they remain compatible with newer
+                    versions of the game.
+                </p>
+                <p>
+                    Our team is dedicated to keeping these mods functional and
+                    improving them where possible while staying true to their
+                    original vision.
+                </p>
+            </div>
 
-        <div class="card">
-            <h2>What We Do</h2>
-            <p>We specialize in repairing and updating Minecraft mods that are no longer being developed. Our goal is to bring old mods back to life and ensure they remain compatible with newer versions of the game.</p>
-            <p>Our team is dedicated to keeping these mods functional and improving them where possible while staying true to their original vision.</p>
-        </div>
-
-        <div class="card">
-            <h2>Our Projects</h2>
-            <p>Check out our current mod revival projects:</p>
-            <a href="impr.html" class="btn">IMP Renewed</a>
-            <a href="oer.html" class="btn">Otyacraft Engine Renewed</a>
-        </div>
-
-        <div class="card">
-            <h2>Stay Connected</h2>
-            <p>Join our Discord community for updates and support:</p>
-            <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord</a>
-        </div>
-    </main>
-    <script src="assets/js/navbar-loader.js"></script>
-    <script src="assets/js/nav-theme.js"></script>
-    <script src="assets/js/theme-toggle.js"></script>
-</body>
+            <div class="card">
+                <h2>Our Projects</h2>
+                <p>Check out our current mod revival projects:</p>
+                <a href="impr.html" class="btn">IMP Renewed</a>
+                <a href="oer.html" class="btn">Otyacraft Engine Renewed</a>
+            </div>
+        </main>
+        <script src="assets/js/navbar-loader.js"></script>
+        <script src="assets/js/nav-theme.js"></script>
+        <script src="assets/js/theme-toggle.js"></script>
+        <script src="assets/js/footer-loader.js"></script>
+    </body>
 </html>
