--- a/navbar.html
+++ b/navbar.html
@@ -2,11 +2,17 @@
 <nav class="navbar site-nav" role="navigation" aria-label="Main">
     <div class="nav-content">
         <a href="index.html" class="logo">
-            <img src="favicon.ico" alt="Mod-Sauce Logo">
-            Mod-Sauce Dev's
+            <img src="favicon.ico" alt="Mod-Sauce Logo" />
+            Mod-Sauce
         </a>
 
-        <button id="nav-toggle" class="burger" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle menu">
+        <button
+            id="nav-toggle"
+            class="burger"
+            aria-expanded="false"
+            aria-controls="primary-menu"
+            aria-label="Toggle menu"
+        >
             <span class="burger-box"><span class="burger-inner"></span></span>
         </button>
 
@@ -22,14 +28,22 @@
                     </div>
                 </div>
                 <a href="testing.html">Test Uploads</a>
-                <a href="https://github.com/Mod-Sauce/" target="_blank">Github</a>
-                <a href="https://codeberg.org/Mod-Sauce/" target="_blank">Codeberg</a>
+                <a href="https://github.com/Mod-Sauce/" target="_blank"
+                    >Github</a
+                >
+                <a href="https://codeberg.org/Mod-Sauce/" target="_blank"
+                    >Codeberg</a
+                >
             </div>
         </div>
 
-        <button id="theme-toggle" class="theme-toggle-btn" aria-label="Toggle dark/light mode" type="button">
+        <button
+            id="theme-toggle"
+            class="theme-toggle-btn"
+            aria-label="Toggle dark/light mode"
+            type="button"
+        >
             <span class="toggle-icon">🌙</span>
         </button>
     </div>
 </nav>
-
