--- a/oer.html
+++ b/oer.html
@@ -1,49 +1,90 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OER - Mod-Sauce Dev's</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/theme-toggle.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>OER - Mod-Sauce</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="assets/css/theme-toggle.css"
+        />
+    </head>
+    <body>
+        <!-- Main Content -->
+        <main class="main-content">
+            <h1>OER (Otyacraft Engine Renewed)</h1>
+            <p>
+                OER, or Otyacraft Engine Renewed, is our project dedicated to
+                updating the Otyacraft Engine to be compatible with the newest
+                modloader versions for Minecraft.
+            </p>
 
-</head>
-<body>
-    <!-- Main Content -->
-    <main class="main-content">
-        <h1>OER (Otyacraft Engine Renewed)</h1>
-        <p>OER, or Otyacraft Engine Renewed, is our project dedicated to updating the Otyacraft Engine to be compatible with the newest modloader versions for Minecraft.</p>
+            <div class="card">
+                <h2>About Otyacraft Engine</h2>
+                <p>
+                    Otyacraft Engine is a core mod that provides essential
+                    functionality and API for other Otyacraft mods. It's a
+                    fundamental part of the Otyacraft mod ecosystem, but it
+                    required updates to work with modern modloader versions.
+                </p>
+            </div>
 
-        <div class="card">
-            <h2>About Otyacraft Engine</h2>
-            <p>Otyacraft Engine is a core mod that provides essential functionality and API for other Otyacraft mods. It's a fundamental part of the Otyacraft mod ecosystem, but it required updates to work with modern modloader versions.</p>
-        </div>
+            <div class="card">
+                <h2>OER's Features</h2>
+                <ul>
+                    <li>
+                        <strong>Modern Modloader Compatibility:</strong> Updated
+                        to work seamlessly with the latest versions of popular
+                        modloaders.
+                    </li>
+                    <li>
+                        <strong>Stability Improvements:</strong> Addressed
+                        compatibility issues and bugs from the original engine.
+                    </li>
+                    <li>
+                        <strong>Continued Support:</strong> We are committed to
+                        keeping OER up-to-date and reliable.
+                    </li>
+                    <li>
+                        <strong>API Maintenance:</strong> Ensuring that the core
+                        API remains functional and usable for other Otyacraft
+                        mods.
+                    </li>
+                </ul>
+            </div>
 
-        <div class="card">
-            <h2>OER's Features</h2>
-            <ul>
-                <li><strong>Modern Modloader Compatibility:</strong> Updated to work seamlessly with the latest versions of popular modloaders.</li>
-                <li><strong>Stability Improvements:</strong> Addressed compatibility issues and bugs from the original engine.</li>
-                <li><strong>Continued Support:</strong> We are committed to keeping OER up-to-date and reliable.</li>
-                <li><strong>API Maintenance:</strong> Ensuring that the core API remains functional and usable for other Otyacraft mods.</li>
-            </ul>
-        </div>
+            <div class="card">
+                <h2>Our Goal</h2>
+                <p>
+                    Our goal with OER is to ensure that the Otyacraft mod
+                    ecosystem can continue to thrive on modern Minecraft
+                    versions. By updating the core engine, we are enabling other
+                    Otyacraft mods to remain relevant and enjoyable.
+                </p>
+            </div>
 
-        <div class="card">
-            <h2>Our Goal</h2>
-            <p>Our goal with OER is to ensure that the Otyacraft mod ecosystem can continue to thrive on modern Minecraft versions. By updating the core engine, we are enabling other Otyacraft mods to remain relevant and enjoyable.</p>
-        </div>
-
-        <div class="card">
-            <h2>Download and Support</h2>
-            <p>Stay tuned for download links and updates.</p>
-            <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord</a>
-            <p>Thank you for supporting OER!</p>
-        </div>
-    </main>
-    <script src="assets/js/navbar-loader.js"></script>
-    <script src="assets/js/nav-theme.js"></script>
-    <script src="assets/js/theme-toggle.js"></script>
-</body>
+            <div class="card">
+                <h2>Download</h2>
+                <p>You can find the Mod on these platforms:</p>
+                <a
+                    href="https://modrinth.com/mod/otyacraft-engine-renewed"
+                    class="btn"
+                    >Download on Modrinth</a
+                >
+                <a
+                    href="https://www.curseforge.com/minecraft/mc-mods/otyacraft-engine-renewed"
+                    class="btn"
+                    >Download on CurseForge</a
+                >
+                <p>Thank you for supporting OER!</p>
+            </div>
+        </main>
+        <script src="assets/js/navbar-loader.js"></script>
+        <script src="assets/js/nav-theme.js"></script>
+        <script src="assets/js/theme-toggle.js"></script>
+        <script src="assets/js/footer-loader.js"></script>
+    </body>
 </html>
