--- a/impr.html
+++ b/impr.html
@@ -1,49 +1,81 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMPR - Mod-Sauce Dev's</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/theme-toggle.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>IMPR - Mod-Sauce</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="assets/css/theme-toggle.css"
+        />
+    </head>
+    <body>
+        <!-- Main Content -->
+        <main class="main-content">
+            <h1>IMPR (Iam Music Player Renewed)</h1>
+            <p>
+                IMPR, or Iam Music Player Renewed, is our revived and updated
+                version of the classic Iam Music Player mod for Minecraft. We've
+                taken the original mod and brought it back to life, ensuring
+                it's compatible with modern Minecraft versions.
+            </p>
 
-</head>
-<body>
-    <!-- Main Content -->
-    <main class="main-content">
-        <h1>IMPR (Iam Music Player Renewed)</h1>
-        <p>IMPR, or Iam Music Player Renewed, is our revived and updated version of the classic Iam Music Player mod for Minecraft. We've taken the original mod and brought it back to life, ensuring it's compatible with modern Minecraft versions.</p>
+            <div class="card">
+                <h2>About Iam Music Player</h2>
+                <p>
+                    The original Iam Music Player allowed players to add and
+                    play custom music within Minecraft. It was a beloved mod
+                    that added a new layer of immersion to the game. However, it
+                    was no longer maintained and became incompatible with newer
+                    versions.
+                </p>
+            </div>
 
-        <div class="card">
-            <h2>About Iam Music Player</h2>
-            <p>The original Iam Music Player allowed players to add and play custom music within Minecraft. It was a beloved mod that added a new layer of immersion to the game. However, it was no longer maintained and became incompatible with newer versions.</p>
-        </div>
+            <div class="card">
+                <h2>IMPR's Features</h2>
+                <ul>
+                    <li>
+                        <strong>Custom Music Playback:</strong> Easily add and
+                        play your favorite music in-game.
+                    </li>
+                    <li>
+                        <strong>Continued Support:</strong> We are committed to
+                        maintaining and updating IMP.
+                    </li>
+                </ul>
+            </div>
 
-        <div class="card">
-            <h2>IMPR's Features</h2>
-            <ul>
-                <li><strong>Custom Music Playback:</strong> Easily add and play your favorite music in-game.</li>
-                <li><strong>Continued Support:</strong> We are committed to maintaining and updating IMP.</li>
-            </ul>
-        </div>
+            <div class="card">
+                <h2>Our Goal</h2>
+                <p>
+                    Our goal with IMP is to bring back the joy of custom music
+                    to Minecraft players. We want to ensure that this fantastic
+                    mod continues to be available for everyone to enjoy.
+                </p>
+            </div>
 
-        <div class="card">
-            <h2>Our Goal</h2>
-            <p>Our goal with IMP is to bring back the joy of custom music to Minecraft players. We want to ensure that this fantastic mod continues to be available for everyone to enjoy.</p>
-        </div>
-
-        <div class="card">
-            <h2>Download and Support</h2>
-            <p>You can find the Mod on these platforms:</p>
-            <a href="https://modrinth.com/mod/iam-music-player-renewed" class="btn">Download on Modrinth</a>
-            <a href="https://www.curseforge.com/minecraft/mc-mods/iammusicplayer-renewed" class="btn">Download on CurseForge</a>
-            <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord</a>
-            <p>Thank you for supporting IMPR!</p>
-        </div>
-    </main>
-    <script src="assets/js/navbar-loader.js"></script>
-    <script src="assets/js/nav-theme.js"></script>
-    <script src="assets/js/theme-toggle.js"></script>
-</body>
+            <div class="card">
+                <h2>Download</h2>
+                <p>You can find the Mod on these platforms:</p>
+                <a
+                    href="https://modrinth.com/mod/iam-music-player-renewed"
+                    class="btn"
+                    >Download on Modrinth</a
+                >
+                <a
+                    href="https://www.curseforge.com/minecraft/mc-mods/iammusicplayer-renewed"
+                    class="btn"
+                    >Download on CurseForge</a
+                >
+                <p>Thank you for supporting IMPR!</p>
+            </div>
+        </main>
+        <script src="assets/js/navbar-loader.js"></script>
+        <script src="assets/js/nav-theme.js"></script>
+        <script src="assets/js/theme-toggle.js"></script>
+        <script src="assets/js/footer-loader.js"></script>
+    </body>
 </html>
