--- a/test.html
+++ b/test.html
@@ -1,35 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mod-Sauce Dev's</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/theme-toggle.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Mod-Sauce</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="assets/css/theme-toggle.css"
+        />
+    </head>
+    <body>
+        <!-- Main Content -->
+        <main class="main-content">
+            <h1>Test Page</h1>
+            <p>This is a test page to verify the design consistency.</p>
 
-</head>
-<body>
+            <div class="card">
+                <h2>What We Do</h2>
+                <p>
+                    We specialize in repairing and updating Minecraft mods that
+                    are no longer being developed. Our goal is to bring old mods
+                    back to life and ensure they remain compatible with newer
+                    versions of the game.
+                </p>
+                <p>
+                    Our team is dedicated to keeping these mods functional and
+                    improving them where possible while staying true to their
+                    original vision.
+                </p>
+            </div>
 
-    <!-- Main Content -->
-    <main class="main-content">
-        <h1>Test Page</h1>
-        <p>This is a test page to verify the design consistency.</p>
-
-        <div class="card">
-            <h2>What We Do</h2>
-            <p>We specialize in repairing and updating Minecraft mods that are no longer being developed. Our goal is to bring old mods back to life and ensure they remain compatible with newer versions of the game.</p>
-            <p>Our team is dedicated to keeping these mods functional and improving them where possible while staying true to their original vision.</p>
-        </div>
-
-        <div class="card">
-            <h2>Stay Connected</h2>
-            <p>Join our Discord community for updates and support:</p>
-            <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord</a>
-        </div>
-    </main>
-    <script src="assets/js/navbar-loader.js"></script>
-    <script src="assets/js/nav-theme.js"></script>
-    <script src="assets/js/theme-toggle.js"></script>
-</body>
+            <div class="card">
+                <h2>Stay Connected</h2>
+                <p>Join our Discord community for updates and support:</p>
+                <a href="https://discord.gg/VNrzdd5ErJ" class="btn"
+                    >Join Discord</a
+                >
+            </div>
+        </main>
+        <script src="assets/js/navbar-loader.js"></script>
+        <script src="assets/js/nav-theme.js"></script>
+        <script src="assets/js/theme-toggle.js"></script>
+        <script src="assets/js/footer-loader.js"></script>
+    </body>
 </html>
