--- a/testing.html
+++ b/testing.html
@@ -1,179 +1,188 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Uploads - Mod-Sauce Dev's</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/theme-toggle.css">
-    <style>
-        .upload-card {
-            max-width: 500px;
-            margin: 3rem auto;
-            transition: all 0.3s ease;
-        }
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Test Uploads - Mod-Sauce</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="assets/css/theme-toggle.css"
+        />
+    </head>
+    <body>
+        <!-- Main Content -->
+        <main class="main-content">
+            <div class="card upload-card">
+                <div class="input-group">
+                    <label for="mod-select">Mod</label>
+                    <select id="mod-select">
+                        <option value="">Select Mod</option>
+                    </select>
+                </div>
 
-        .input-group {
-            margin: 1.5rem 0;
-            opacity: 1;
-            max-height: 200px;
-            overflow: hidden;
-            transition: all 0.3s ease;
-        }
+                <div class="input-group hidden" id="loader-group">
+                    <label for="loader-select">Loader</label>
+                    <select id="loader-select">
+                        <option value="">Select Loader</option>
+                    </select>
+                </div>
 
-        .input-group.hidden {
-            opacity: 0;
-            max-height: 0;
-            margin: 0;
-        }
+                <div class="input-group hidden" id="version-group">
+                    <label for="version-select">Version</label>
+                    <select id="version-select">
+                        <option value="">Select Version</option>
+                    </select>
+                </div>
 
-        .input-group label {
-            display: block;
-            font-size: 1.1rem;
-            margin-bottom: 0.5rem;
-            color: var(--text-primary);
-            font-weight: 500;
-        }
+                <div class="input-group hidden" id="download-group">
+                    <a href="#" id="download-btn" class="btn">Download</a>
+                </div>
 
-        .input-group select {
-            width: 100%;
-            padding: 0.8rem;
-            font-size: 1rem;
-            background: var(--bg-secondary);
-            color: var(--text-primary);
-            border: 1px solid var(--border-color);
-            border-radius: 6px;
-            cursor: pointer;
-            font-family: 'Inter', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
-            transition: all 0.3s ease;
-        }
-
-        .input-group select:hover {
-            border-color: var(--accent-color);
-        }
-
-        .input-group select:focus {
-            outline: none;
-            border-color: var(--accent-color);
-            box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
-        }
-
-        #download-btn {
-            width: 100%;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="card upload-card">
-            <div class="input-group">
-                <label for="project-select">Project</label>
-                <select id="project-select">
-                    <option value="">Select Project</option>
-                </select>
+                <div id="version-warning"></div>
             </div>
+        </main>
 
-            <div class="input-group hidden" id="version-group">
-                <label for="version-select">Version</label>
-                <select id="version-select">
-                    <option value="">Select Version</option>
-                </select>
-            </div>
+        <script>
+            let downloadsConfig = {};
 
-            <div class="input-group hidden" id="download-group">
-                <a href="#" id="download-btn" class="btn">Download</a>
-            </div>
-        </div>
-    </main>
-
-    <script>
-        let downloadsConfig = {};
-
-        fetch('downloads.txt')
-            .then(res => res.text())
-            .then(data => {
-                downloadsConfig = parseConfig(data);
-                populateProjects();
-            })
-            .catch(err => {
-                console.error('Error loading downloads.txt:', err);
-            });
-
-        function parseConfig(text) {
-            const lines = text.split('\n').filter(line => line.trim() && !line.trim().startsWith('#'));
-            const config = {};
-            let currentProject = null;
-
-            lines.forEach(line => {
-                const trimmed = line.trim();
-                
-                if (!line.startsWith(' ') && !line.startsWith('\t')) {
-                    currentProject = trimmed;
-                    config[currentProject] = {};
-                } else if (currentProject && trimmed.includes('=')) {
-                    const [version, url] = trimmed.split('=').map(s => s.trim());
-                    config[currentProject][version] = url;
-                }
-            });
-
-            return config;
-        }
-
-        function populateProjects() {
-            const projectSelect = document.getElementById('project-select');
-            const projects = Object.keys(downloadsConfig);
-
-            projects.forEach(project => {
-                const option = document.createElement('option');
-                option.value = project;
-                option.textContent = project;
-                projectSelect.appendChild(option);
-            });
-        }
-
-        document.getElementById('project-select').addEventListener('change', function() {
-            const versionGroup = document.getElementById('version-group');
-            const downloadGroup = document.getElementById('download-group');
-            const versionSelect = document.getElementById('version-select');
-            const project = this.value;
-
-            versionSelect.innerHTML = '<option value="">Select Version</option>';
-            downloadGroup.classList.add('hidden');
-
-            if (project && downloadsConfig[project]) {
-                const versions = Object.keys(downloadsConfig[project]);
-                versions.forEach(version => {
-                    const option = document.createElement('option');
-                    option.value = version;
-                    option.textContent = version;
-                    versionSelect.appendChild(option);
+            fetch("downloads.json")
+                .then((res) => res.json())
+                .then((data) => {
+                    downloadsConfig = data;
+                    populateMods();
+                })
+                .catch((err) => {
+                    console.error("Error loading downloads.json:", err);
                 });
-                versionGroup.classList.remove('hidden');
-            } else {
-                versionGroup.classList.add('hidden');
-            }
-        });
 
-        document.getElementById('version-select').addEventListener('change', function() {
-            const downloadGroup = document.getElementById('download-group');
-            const downloadBtn = document.getElementById('download-btn');
-            const project = document.getElementById('project-select').value;
-            const version = this.value;
+            function populateMods() {
+                const modSelect = document.getElementById("mod-select");
+                const mods = Object.keys(downloadsConfig);
 
-            if (project && version && downloadsConfig[project][version]) {
-                downloadBtn.href = downloadsConfig[project][version];
-                downloadGroup.classList.remove('hidden');
-            } else {
-                downloadGroup.classList.add('hidden');
+                mods.forEach((mod) => {
+                    const option = document.createElement("option");
+                    option.value = mod;
+                    option.textContent = mod;
+                    modSelect.appendChild(option);
+                });
             }
-        });
-    </script>
-    <script src="assets/js/navbar-loader.js"></script>
-    <script src="assets/js/nav-theme.js"></script>
-    <script src="assets/js/theme-toggle.js"></script>
-</body>
+
+            function populateLoaders(mod) {
+                const loaderSelect = document.getElementById("loader-select");
+                const loaderGroup = document.getElementById("loader-group");
+                loaderSelect.innerHTML =
+                    '<option value="">Select Loader</option>';
+
+                if (mod && downloadsConfig[mod]) {
+                    const loaders = Object.keys(downloadsConfig[mod]);
+                    loaders.forEach((loader) => {
+                        const option = document.createElement("option");
+                        option.value = loader;
+                        option.textContent = loader;
+                        loaderSelect.appendChild(option);
+                    });
+                    loaderGroup.classList.remove("hidden");
+                } else {
+                    loaderGroup.classList.add("hidden");
+                }
+            }
+
+            function populateVersions(mod, loader) {
+                const versionSelect = document.getElementById("version-select");
+                const versionGroup = document.getElementById("version-group");
+                versionSelect.innerHTML =
+                    '<option value="">Select Version</option>';
+
+                if (mod && loader && downloadsConfig[mod][loader]) {
+                    const versions = Object.keys(downloadsConfig[mod][loader]);
+                    versions.forEach((version) => {
+                        const option = document.createElement("option");
+                        option.value = version;
+                        option.textContent = version;
+                        versionSelect.appendChild(option);
+                    });
+                    versionGroup.classList.remove("hidden");
+                } else {
+                    versionGroup.classList.add("hidden");
+                }
+            }
+
+            document
+                .getElementById("mod-select")
+                .addEventListener("change", function () {
+                    const mod = this.value;
+                    populateLoaders(mod);
+                    document
+                        .getElementById("version-group")
+                        .classList.add("hidden");
+                    document
+                        .getElementById("download-group")
+                        .classList.add("hidden");
+                    const warningDiv =
+                        document.getElementById("version-warning");
+                    warningDiv.innerHTML = "";
+                    warningDiv.className = "";
+                });
+
+            document
+                .getElementById("loader-select")
+                .addEventListener("change", function () {
+                    const mod = document.getElementById("mod-select").value;
+                    const loader = this.value;
+                    populateVersions(mod, loader);
+                    document
+                        .getElementById("download-group")
+                        .classList.add("hidden");
+                    const warningDiv =
+                        document.getElementById("version-warning");
+                    warningDiv.innerHTML = "";
+                    warningDiv.className = "";
+                });
+
+            document
+                .getElementById("version-select")
+                .addEventListener("change", function () {
+                    const downloadGroup =
+                        document.getElementById("download-group");
+                    const downloadBtn = document.getElementById("download-btn");
+                    const warningDiv =
+                        document.getElementById("version-warning");
+                    const mod = document.getElementById("mod-select").value;
+                    const loader =
+                        document.getElementById("loader-select").value;
+                    const version = this.value;
+
+                    warningDiv.innerHTML = "";
+                    warningDiv.className = "";
+                    downloadGroup.classList.add("hidden");
+
+                    if (mod && loader && version) {
+                        const data = downloadsConfig[mod][loader][version];
+                        if (data) {
+                            if (data.url) {
+                                downloadBtn.href = data.url;
+                                downloadGroup.classList.remove("hidden");
+                            }
+
+                            if (data.note === "NA") {
+                                warningDiv.textContent =
+                                    "Currently no version available. Please check back later.";
+                                warningDiv.className = "info-message";
+                            } else if (data.note === "DEV") {
+                                warningDiv.textContent =
+                                    "Warning: Early development build.";
+                                warningDiv.className = "warning-card";
+                            }
+                        }
+                    }
+                });
+        </script>
+        <script src="assets/js/navbar-loader.js"></script>
+        <script src="assets/js/nav-theme.js"></script>
+        <script src="assets/js/theme-toggle.js"></script>
+        <script src="assets/js/footer-loader.js"></script>
+    </body>
 </html>
